--- a/src/client/_components/PhraseViewer.css
+++ b/src/client/_components/PhraseViewer.css
@@ -13,3 +13,23 @@
 #translation {
   font-family: "Comic Relief", system-ui, Helvetica, Arial, sans-serif;
 }
+
+.override-red {
+  animation: toRed 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+}
+
+.override-blue {
+  animation: toBlue 600ms 100ms cubic-bezier(0.38, 0.97, 0.56, 0.76) forwards;
+}
+
+@keyframes toRed {
+  100% {
+    color: var(--theme-red);
+  }
+}
+
+@keyframes toBlue {
+  100% {
+    color: var(--theme-blue);
+  }
+}
